[ci skip] Update with c4b9160

--- a/book/ch01.html
+++ b/book/ch01.html
@@ -140,7 +140,7 @@
 <p>サイトの内容が豊かであればあるほど仕様書も内容は多くなります。その時は分けて書くことをおすすめします。また1ページごとにワイヤーフレームと仕様書は必要です。</p>
 <p>ワイヤーフレームはPowerPointとExcelのどちらか好きなほうを使います。仕様書はExcelをおすすめします。ワイヤーフレームや仕様書は作る際に3つ気をつけたいことがあります。それらを、ひとつずつ解説していきます。</p>
 <p>気をつける事のひとつ目として、要素は色もしくは形で分けるように書くことです。ワイヤーフレームの要素は大きく分けて画像・テキスト・ボタンの3種類に分けられます。さらに動作の要素を入れると、スクロール・ポップアップなどがあります。これらを見分けがつくように分けて書くことをおすすめします。</p>
-<p>気をつけることのふたつ目として、ワイヤーフレームに余計な情報を入れないということです。ワイヤーフレームはあくまで要素がページ内のどこにあるか示す資料です。そのため色など不要な情報はなるべく入れないのがいいです。なぜならデザイナーはグラフィックとUIの制作に、参考資料としてワイヤーフレームを使うためです。余計な情報があると資料は分かりづらくなり混乱を招きます。グラフィックやUIの方向性を決めるのはアートディレクターの仕事なので、企画資料としては見やすいようにすることが最優先です。</p>
+<p>気をつけることのふたつ目として、ワイヤーフレームに余計な情報を入れないということです。ワイヤーフレームはあくまで要素がページ内のどこにあるか示す資料です。そのため色など不要な情報はなるべく入れないほうがいいです。なぜならデザイナーはグラフィックとUIの制作に、参考資料としてワイヤーフレームを使うためです。余計な情報があると資料は分かりづらくなり混乱を招きます。グラフィックやUIの方向性を決めるのはアートディレクターの仕事なので、企画資料としては見やすいようにすることが最優先です。</p>
 <p>気をつけることの3つ目として、仕様書は箇条書きにすることです。それぞれの要素・動作に対して、箇条書きする必要があります。仕様書を見るエンジニアにとって不明な点がない状態でコーディングできるよう目指します。</p>
 
 <h2><a id="h1-5"></a><span class="secno">1.5　</span>今回のワイヤーフレームと仕様書について</h2>
@@ -225,7 +225,21 @@
 <p></p></blockquote>
 
 <h3><a id="h1-6-3"></a>イラストや素材を自作できない場合どうしたら良いか？</h3>
-<p>とはいえ、イラストや素材を自作できない場合、サイトが殺風景な見た目になりがちです。その場合は写真素材サイトを使うことで解決できることがあります。商用利用可かつクレジット表記が不要という写真素材サイトは多くあります。有名なサイトとして「ぱくたそ」があります。他に女性向けの写真素材サイトとして「GIRLY DROP（ガーリードロップ）」というサイトがあります。また「商用利用可かつ、クレジット表記が不要」とうたっているサイトを横断的に検索できる「タダピク」というサイトもあります。</p>
+<p>とはいえ、イラストや素材を自作できない場合、サイトが殺風景な見た目になりがちです。その場合は写真素材サイトを使うことで解決できます。写真素材サイトの一例として次のサイトがあります。</p>
+<ul>
+<li>ぱくたそ<ul>
+<li>商用利用可かつクレジット表記が不要なサイト</li>
+</ul>
+</li>
+<li>GIRLY DROP（ガーリードロップ）<ul>
+<li>女性向けの写真素材サイト</li>
+</ul>
+</li>
+<li>タダピク<ul>
+<li>商用利用可かつ、クレジット表記が不要とうたっているサイトを横断的に検索できるサイト</li>
+</ul>
+</li>
+</ul>
 <p>写真素材サイトを使うことで、高品質な写真が使えます。ただし写真を使う時は各写真素材サイトの注意項目を読んだ上で、それに沿って使う必要があります。</p>
 
 
