[ci skip] Update with a10dae8

--- a/book/ch01.html
+++ b/book/ch01.html
@@ -50,7 +50,7 @@
 <p>最初に要件定義をすることで、企画書の更新頻度を下げることができます。このことで「これも入れたい」といった思いつきのアイデアに影響されず、作業が巻き戻ることを最小限に抑えられます。これにより一気にサイトを作ることが可能です。</p>
 
 <h3><a id="h1-1-2"></a>ラブライブ!参加者募集サイトの要件定義</h3>
-<p>では実際に要件定義をしていきます。まずどんなサイトを作るかというところから始めます。今回は「ラブライブ!」というアイドルコンテストの募集サイトを作ります。</p>
+<p>では実際に要件定義をしていきます。まずどんなサイトを作るかというところから始めます。今回は「ラブライブ!」というアイドルコンテストの参加者募集サイトを作ります。</p>
 <p>手順としてはまずターゲットユーザーを定義します。そしてターゲットユーザーにどんな体験を与えたいのか考えます。今回は主に見てもらいたいユーザーとして、スクールアイドルが挙げられます。この参加者募集サイトを見た後にスクールアイドルが応募してくれるような体験を作ることが大事です。</p>
 <p>次に機能です。今回は工数・スケジュールを考えた結果、トップページとライブ中継ページの2ページのみ作ることにしました。このように期限と実装期間から現実的な妥協をする判断も要件定義の一部です。</p>
 
