--- a/book/ch02.html
+++ b/book/ch02.html
@@ -36,10 +36,10 @@
             </ul>
 
             <h1><a id="h2"></a><span class="secno">第2章　</span>サイト開発の準備</h1>
-<p>この章ではラブライブ!募集サイトを実装する前の準備について書きます。</p>
+<p>この章ではラブライブ!参加者募集サイトを実装する前の準備について書きます。</p>
 
 <h2><a id="h2-1"></a><span class="secno">2.1　</span>必要なツールの準備</h2>
-<p>はじめに、ラブライブ!募集サイトの実装で必要なツールを準備します。最低限必要なものを列挙していくと以下のものがあります。</p>
+<p>はじめに、ラブライブ!参加者募集サイトの実装で必要なツールを準備します。最低限必要なものを列挙していくと以下のものがあります。</p>
 <ul>
 <li>ソースコードを書くためのエディターもしくはIDE</li>
 <li>表示確認用のブラウザー</li>
@@ -53,7 +53,7 @@
 
 <h3><a id="h2-1-2"></a>ブラウザー</h3>
 <p>必要な物のふたつ目として、サイトを表示確認するためにブラウザーの用意をします。WindowsやOS Xには次のブラウザーが最初からインストールされています。</p>
-<p>しかしサイト開発ではこれらのブラウザーだけではなく、複数ブラウザーで表示を確認する必要があります。他にインストールしておいたほうが良いブラウザーはGoogle ChromeやMozilla Firefoxがあります。できれば、開発版をインストールしておくと、事前に次期バージョンでハマりそうな点が分かるのでおすすめです。</p>
+<p>しかしサイト開発ではこれらのブラウザーだけではなく、複数ブラウザーで表示を確認する必要があります。他にインストールしておいたほうが良いブラウザーはGoogle ChromeやMozilla Firefoxがあります。できれば開発者向けに提供されている開発版をインストールしたほうが、事前に次期バージョンでハマりそうな点が分かるのでおすすめです。</p>
 <ul>
 <li>Windows<ul>
 <li>Edge、Internet Explorer</li>
@@ -66,8 +66,7 @@
 </ul>
 
 <h3><a id="h2-1-3"></a>GitとGitHub</h3>
-<p>必要な物の3つ目として、作業履歴を管理するためにGitとGitHubを用意します。たとえば突然PCがブルースクリーンになってしまい、予期しないシャットダウンをしなければいけなくなったとします。</p>
-<p>その時Gitに作業履歴が残っていれば、かなり前の作業まで遡ってしまうことが少なくなります。GitはSourceTreeをダウンロードして使うのが良いでしょう。もしGitについてあまり知らない場合は、拙著のSteins;Gitを読んでみてください。</p>
+<p>必要な物の3つ目として、作業履歴を管理するためにGitとGitHubを用意します。たとえば突然PCがブルースクリーンになってしまい、予期しないシャットダウンをしなければいけなくなったとします。その時Gitに作業履歴が残っていれば、かなり前の作業まで遡ってしまうことが少なくなります。GitはSourceTreeをダウンロードして使うのが良いでしょう。もしGitについてあまり知らない場合は、拙著のSteins;Gitを読んでみてください。</p>
 
 <h2><a id="h2-2"></a><span class="secno">2.2　</span>分からないことがあった時には？</h2>
 <p>サイトの実装をしていくうちに、分からないところが出てくる場合もあります。</p>
