[ci skip] Update with bbb3547

--- a/book/ch01.html
+++ b/book/ch01.html
@@ -85,7 +85,7 @@
 <p>字面どおりサイトのトップページを意味します。ユーザーがサイトを見ている時、どのページにいたとしても1クリックでトップページへ戻れます。サイトを見る時の習慣に準じて一番見やすい左上へ置いたのは、ターゲットユーザーにとって一番大事、一番クリックしてほしいという理由があります。</p>
 
 <h4><a id="h1-2-1-2"></a>LIVE STAGE</h4>
-<p>ラブライブ!の状況をネットで生中継するページだと思われます。参加するアイドルグループが見る、OUTLINEやSCHEDULEより左に位置しています。これは一体どういうことでしょうか？これは参加するアイドルグループの他に、ライブをネット上で見るファンも大事という考えがあると思います。ライブステージ内にある要素をアニメのキャプチャ画像から推測してみると、以下の要素で構成されているように見えます。</p>
+<p>ラブライブ!の状況をネットで生中継するページだと思われます。参加するアイドルグループが見る、OUTLINEやSCHEDULEより左に位置しています。これは一体どういうことでしょうか？これは参加するアイドルグループの他に、ライブをネット上で見るファンも大事という考えがあると思います。ライブステージページ内にある要素をアニメのキャプチャ画像から推測してみると、以下の要素で構成されているように見えます。</p>
 <ul>
 <li>映像タイトル</li>
 <li>出演者</li>
@@ -125,8 +125,8 @@
 <p>サイトマップを書く時、個人的に推奨するツールはExcelです。画像を作るイメージからPowerPointが良いと思う方もいるかもしれません。しかし実はセル結合や枠線を描画して作るほうが楽です。Excelがない場合はGoogle Driveのスプレッドシートも最低限な機能がそろっているので代用できます。作るときの心がけとして、階層を意識し外部リンクは明確に表示するよう作成するのをおすすめします。</p>
 
 <h3><a id="h1-3-1"></a>今回のサイトマップについて</h3>
-<p>要件整理をきちんとまとめれば、サイトマップはほぼ考えずに作れると思います。今回作るのはトップとライブステージの2ページです。またライブステージ内にポップアップ画面を設計しました。</p>
-<p>一番上層のページをトップとして下層にライブステージを書きます。他に外部リンクであるSNSボタンをつけて完成です。今回は極めて簡単な内容のためこれで終わりです。</p>
+<p>要件整理をきちんとまとめれば、サイトマップはほぼ考えずに作れると思います。今回作るのはトップとライブステージページの2ページです。またライブステージページ内にポップアップ画面を設計しました。</p>
+<p>一番上層のページをトップとして下層にライブステージページを書きます。他に外部リンクであるSNSボタンをつけて完成です。今回は極めて簡単な内容のためこれで終わりです。</p>
 <p>本来は各下層ページにさらなる下層ページがある、サイトのあらゆる表示可能なページ（ポップアップやエラーページなど）を全部作らないといけません。そのためExcelに起こす前の段階で紙へ下書きを書いたほうが良いです。</p>
 <div id="id_02" class="image">
 <img src="images/ch01/02.jpg" alt="サイトマップ" />
@@ -178,9 +178,9 @@
 <p>映像エリアの隣に広告スペースが見えます。おそらくここに広告が掲載されるでしょう。</p>
 <p>また本来は「ニコニコ動画」のようなコメント機能があると思われます。今回は工数が足りないため少し改造しSNSコメントという似ている機能へ変更しました。「何かをコメントする」体験は変えず、より工数の少ないものに変えられたと思います。</p>
 <div id="id_04" class="image">
-<img src="images/ch01/04.jpg" alt="ライブステージのワイヤーフレーム" />
+<img src="images/ch01/04.jpg" alt="ライブステージページのワイヤーフレーム" />
 <p class="caption">
-図1.7: ライブステージのワイヤーフレーム
+図1.7: ライブステージページのワイヤーフレーム
 </p>
 </div>
 
