--- a/book/ch05.html
+++ b/book/ch05.html
@@ -109,7 +109,7 @@
 </div>
 
 <h2><a id="h5-4"></a><span class="secno">5.4　</span>HTMLのまとめ</h2>
-<p>ライブステージのHTMLをまとめると次のとおりになります。</p>
+<p>ライブステージページのHTMLをまとめると次のとおりになります。</p>
 <div class="emlist-code">
 <pre class="emlist">&lt;div class=&quot;container-fluid&quot;&gt;
   &lt;div class=&quot;row&quot;&gt;
@@ -169,7 +169,7 @@
 <p>HTMLのマークアップが終わったので、スタイルの適用をしていきます。はじめにライブステージページ全体へ関わるスタイルを適用します。</p>
 <p>ライブステージページの<tt>main</tt>要素に対し、<tt>padding</tt>や<tt>background-color</tt>を指定することでライブステージページの見た目に近づけていきます。また見出しにもスタイルを適用することで、より元の見た目に近づけていきます。</p>
 <div class="emlist-code">
-<pre class="emlist">/* ライブステージ：コンテンツ */
+<pre class="emlist">/* ライブステージページ：コンテンツ */
 #ll-livestage-page main {
   padding: 1em 0;
   background-color: #dcdcdc;
@@ -333,9 +333,9 @@
 </div>
 
 <h2><a id="h5-11"></a><span class="secno">5.11　</span>CSSのまとめ</h2>
-<p>ライブステージのCSSをまとめると次のとおりになります。</p>
+<p>ライブステージページのCSSをまとめると次のとおりになります。</p>
 <div class="emlist-code">
-<pre class="emlist">/* ライブステージ：コンテンツ */
+<pre class="emlist">/* ライブステージページ：コンテンツ */
 #ll-livestage-page main {
   padding: 1em 0;
   background-color: #dcdcdc;
