--- a/book/index.html
+++ b/book/index.html
@@ -45,6 +45,15 @@
 <p>この同人誌では、アニメからキャプチャ画像を引用している箇所があります。これに関しては著作権法第32条の1項で規定されている引用の条件に基づき、引用をおこなっています。</p>
 
 <h2><a id="h-3"></a>Special thanks</h2>
+<p>「サイト制作のSTART:DASH!!」を書くにあたり、さまざまな人達にレビューしていただきました。ここではレビューしていただいた人達を紹介します。本当にありがとうございました。（名前の並びはアルファベット順となります）</p>
+<ul>
+<li>@MITLicense</li>
+<li>@hiloki</li>
+<li>@kitayan25</li>
+<li>@momdo_</li>
+<li>@sd_ts1017</li>
+<li>@yoshiko_pg</li>
+</ul>
 
 
             <ul class="pager">
