[ci skip] Update with 18a58e2

--- a/book/ch03.html
+++ b/book/ch03.html
@@ -39,7 +39,7 @@
 <p>いよいよ、サイトを作っていきます。まずはサイト共通の構造をトップとライブステージページから洗い出し、それをマークアップしていきます。</p>
 
 <h2><a id="h3-1"></a><span class="secno">3.1　</span>共通の構造を洗い出し</h2>
-<p>トップページやライブステージページのアニメキャプチャ画像から共通構造を抜き出すと、次に挙げる3つが共通構造となります。</p>
+<p>トップやライブステージページのアニメキャプチャ画像から共通構造を抜き出すと、次に挙げる3つが共通構造となります。</p>
 <ul>
 <li>ヘッダー</li>
 <li>グローバルナビゲーション</li>
@@ -49,9 +49,9 @@
 <p>また、ヘッダー・グローバルナビゲーション・フッターを使ったサイト構成は多く見られるため、訪問者も見慣れていることが期待できます。つまりどこに主となる情報があり、ナビゲーションはどこにあるか、初めてサイトへ来た人にも分かってもらえるという効果も期待できます。</p>
 <p>特に今回は主に見てもらいたい層として、スクールアイドルというコンピューター・リテラシーが一定ではない人たちのため、分かりやすさ重視にしたと思われます。</p>
 <div id="lovelive-screenshot-top" class="image">
-<img src="images/ch03/lovelive-screenshot-top.jpg" alt="サイトトップ（ラブライブ！第2期 1話より）© プロジェクトラブライブ！" />
+<img src="images/ch03/lovelive-screenshot-top.jpg" alt="トップページ（ラブライブ！第2期 1話より）© プロジェクトラブライブ！" />
 <p class="caption">
-図3.1: サイトトップ（ラブライブ！第2期 1話より）© プロジェクトラブライブ！
+図3.1: トップページ（ラブライブ！第2期 1話より）© プロジェクトラブライブ！
 </p>
 </div>
 <div id="lovelive-screenshot-livestage" class="image">
@@ -62,7 +62,7 @@
 </div>
 
 <h2><a id="h3-2"></a><span class="secno">3.2　</span>ファイル構成</h2>
-<p>今回作成するサイトのファイル構成を考えていきます。ファイル構成は次のとおりとなります。<tt>index.html</tt>はトップページ、<tt>livestage.html</tt>はライブステージページ用のHTMLとなります。ディレクトリーとしては<tt>external</tt>・<tt>styles</tt>・<tt>scripts</tt>・<tt>images</tt>の4つがあり、その中に各ファイルを置く想定です。</p>
+<p>今回作成するサイトのファイル構成を考えると図のようになります。<tt>index.html</tt>はトップページ、<tt>livestage.html</tt>はライブステージページ用のHTMLとなります。ディレクトリーとしては<tt>external</tt>・<tt>styles</tt>・<tt>scripts</tt>・<tt>images</tt>の4つがあり、その中に各ファイルを置く想定です。</p>
 <div class="emlist-code">
 <pre class="emlist">/
 ├- index.html
@@ -80,27 +80,27 @@
 <p>各ディレクトリーには、以下の規則に則ってファイルを置きます。</p>
 <ul>
 <li>external<ul>
-<li>CSS・JavaScript問わず、ライブラリを置くディレクトリ</li>
+<li>CSS・JavaScript問わず、ライブラリを置くディレクトリー</li>
 </ul>
 </li>
 <li>styles<ul>
-<li>CSSファイルを置くディレクトリ</li>
+<li>CSSファイルを置くディレクトリー</li>
 </ul>
 </li>
 <li>scripts<ul>
-<li>JavaScriptファイルを置くディレクトリ</li>
+<li>JavaScriptファイルを置くディレクトリー</li>
 </ul>
 </li>
 <li>images<ul>
-<li>画像ファイルを置くディレクトリ</li>
+<li>画像ファイルを置くディレクトリー</li>
 </ul>
 </li>
 </ul>
 
 <h2><a id="h3-3"></a><span class="secno">3.3　</span>基本構造のマークアップ</h2>
 <p>それでは実際にHTMLでサイトの構造を作っていきます。はじめに<tt>DOCTYPE</tt>というものを書きます。この<tt>DOCTYPE</tt>ですが、過去の経緯から書くことが必須となっています。</p>
-<p>続く<tt>html</tt>要素内には<tt>head</tt>要素と<tt>body</tt>要素が含まれます。<tt>head</tt>要素内には<tt>title</tt>要素や<tt>meta</tt>要素でサイト情報を書いていきます。また、CSSやJavaScriptの読み込みも<tt>head</tt>要素内でおこないます。</p>
-<p><tt>body</tt>要素内にはこのページの主となるものを書いていきます。現在は<tt>main</tt>要素のみ用意しています。この要素はサイトの主要な内容を示すものとなります。</p>
+<p><tt>html</tt>要素内には<tt>head</tt>要素と<tt>body</tt>要素が含まれます。<tt>head</tt>要素内には<tt>title</tt>要素や<tt>meta</tt>要素でサイト情報を書いていきます。また、CSSやJavaScriptの読み込みも<tt>head</tt>要素内でおこないます。</p>
+<p><tt>body</tt>要素内にはこのページの内容を書いていきます。<tt>body</tt>要素内にある<tt>main</tt>要素はサイトの主要な内容を示すものとなります。</p>
 <p>なお<tt>main</tt>要素で<tt>role</tt>属性の値に<tt>main</tt>を指定していますが、これは<a href="http://caniuse.com/#feat=html5semantic" class="link">IE11がmain要素をサポートしていない</a>ためです。そのため<tt>role</tt>属性で<tt>main</tt>を指定して、サイトの主要な内容だということをIE11にも伝える意図で指定しています。</p>
 <p>このHTMLを基礎として、肉付けしていきます。</p>
 <div class="emlist-code">
@@ -128,8 +128,8 @@
 <h2><a id="h3-4"></a><span class="secno">3.4　</span>ヘッダーのマークアップ</h2>
 <p>基礎部分のマークアップが終わったので、次にヘッダーをマークアップしていきます。ヘッダーにはサイトのタイトルロゴと、メールマガジンやSNS、ヘルプなどのリンクがあります。</p>
 <p>今回はCSSライブラリとして、BootstrapのテーマであるNicoを使っているため、各要素の<tt>class</tt>属性にBootstrapで定義されているクラス名を定義します。</p>
-<p>なお今回作らないページについては、図のように<tt>a</tt>要素の<tt>href</tt>属性に<tt>#</tt>を入れておきます。こうすることで、作っていないページを検索するとき、検索が楽になることを狙っています。</p>
-<p>またBootstrapにはないクラス名を定義する際、図のように<tt>ll-</tt>という接頭辞を付けています（<strong>l</strong> ove <strong>l</strong> ive）。これはBootstrapで定義されているクラス名と競合しないように、安全策で接頭辞を付けています。</p>
+<p>作らないページについては、図のように<tt>a</tt>要素の<tt>href</tt>属性に<tt>#</tt>を入れておきます。こうすることで、作っていないページの検索が楽になることを狙っています。</p>
+<p>Bootstrapにはないクラス名を定義する際、図のように<tt>ll-</tt>という接頭辞を付けています（<strong>l</strong> ove <strong>l</strong> ive）。これはBootstrapで定義されているクラス名と競合しないように、安全策で接頭辞を付けています。</p>
 <div class="emlist-code">
 <pre class="emlist">&lt;header id=&quot;ll-header&quot; class=&quot;navbar navbar-default&quot;&gt;
   &lt;div class=&quot;container-fluid&quot;&gt;
@@ -157,9 +157,9 @@
 </div>
 
 <h2><a id="h3-5"></a><span class="secno">3.5　</span>グローバルナビゲーションのマークアップ</h2>
-<p>ヘッダーの次はグローバルナビゲーションをマークアップしていきます。グローバルナビゲーションは、サイト内の主要なページへリンクしているものです。</p>
-<p>はじめに、nav要素で全体を囲みます。nav要素は主要なページへリンクしている箇所で使われる要素となります。そして、各要素の<tt>class</tt>属性にはBootstrapで定義されているクラス名を定義します。先ほどと同じく、今回作らないページについては、図のように<tt>a</tt>要素の<tt>href</tt>属性に<tt>#</tt>を入れておきます。</p>
-<p>また、現在見ているページを示すためのクラス名として、Top部分に<tt>ll-active</tt>というクラス名を付けています。<tt>ll-active</tt>内でBootstrapが<tt>active</tt>に対してスタイル定義しているところを上書きします。</p>
+<p>グローバルナビゲーションは、サイト内の主要なページへリンクしているものです。</p>
+<p>はじめにnav要素で全体を囲みます。nav要素は主要なページへリンクしている箇所で使われる要素となります。各要素の<tt>class</tt>属性にはBootstrapで定義されているクラス名を定義します。先ほどと同じく今回作らないページについては、図のように<tt>a</tt>要素の<tt>href</tt>属性に<tt>#</tt>を入れておきます。</p>
+<p>現在見ているページを示すためのクラス名として、Top部分に<tt>ll-active</tt>というクラス名を付けています。<tt>ll-active</tt>内でBootstrapが<tt>active</tt>に対してスタイル定義しているところを上書きします。</p>
 <div class="emlist-code">
 <pre class="emlist">&lt;nav id=&quot;ll-nav&quot; class=&quot;navbar navbar-inverse&quot;&gt;
   &lt;div class=&quot;container-fluid&quot;&gt;
@@ -178,8 +178,8 @@
 </div>
 
 <h2><a id="h3-6"></a><span class="secno">3.6　</span>フッターのマークアップ</h2>
-<p>ヘッダー、グローバルナビゲーションと来たので、最後にフッターをマークアップしていきます。ここには著作権情報やプライバシーポリシー、サイトマップといったリンクを追加します。</p>
-<p>また、アニメのキャプチャ画像を見ると、フッター部分には「●○○○○」のような表示があります。これはページネーションといわれる、ある要素内にどれだけの要素が内包されているかを示すものです。しかし、フッター内にページネーションを含めるのは一般的でないため、特にマークアップしません。</p>
+<p>フッターには著作権情報やプライバシーポリシー、サイトマップといったリンクを追加します。</p>
+<p>アニメのキャプチャ画像を見ると、フッター部分には「●○○○○」のような表示があります。これはページネーションといわれる、ある要素内にどれだけの要素が内包されているかを示すものです。しかしフッター内にページネーションを含めるのは一般的でないため、特にマークアップしません。</p>
 <div class="emlist-code">
 <pre class="emlist">&lt;footer id=&quot;ll-footer&quot; class=&quot;navbar navbar-default&quot;&gt;
   &lt;div class=&quot;container-fluid&quot;&gt;
@@ -261,7 +261,7 @@
 &lt;/html&gt;
 </pre>
 </div>
-<p>スクリーンショットは次のとおりになります。Bootstrapを読み込んだ上で、Bootstrapに定義されているクラス名を<tt>class</tt>属性へ適宜書いていたため、殺風景ではない見た目になっています。ただし、見た目がアニメのキャプチャ画像と違うところがあるため、CSSで微調整をしていきます。</p>
+<p>スクリーンショットは次のとおりになります。Bootstrapを読み込んだ上で、Bootstrapに定義されているクラス名を<tt>class</tt>属性へ適宜書いていたため、殺風景ではない見た目になっています。しかし見た目がアニメのキャプチャ画像と違うところがあるため、CSSで微調整をしていきます。</p>
 <div id="common-html" class="image">
 <img src="images/ch03/common-html.jpg" alt="HTMLだけで作ったサイト" />
 <p class="caption">
@@ -270,8 +270,8 @@
 </div>
 
 <h2><a id="h3-8"></a><span class="secno">3.8　</span>ヘッダーの見た目をよくする</h2>
-<p>はじめに、CSSでヘッダーの下部にある隙間を無くします。これは<tt>margin-bottom: 0;</tt>とするだけで下部の隙間がなくなります。</p>
-<p>また、間延びしたようなスタイルとなっているロゴ部分のスタイルを調整します。これは要素の高さ調整と、<tt>margin</tt>・<tt>padding</tt>を使って要素内外にある隙間を調整すれば、間延びした見た目ではなくなります。</p>
+<p>CSSでヘッダーの下部にある隙間を無くします。これは<tt>margin-bottom: 0;</tt>とするだけで下部の隙間がなくなります。</p>
+<p>間延びしたようなスタイルとなっているロゴ部分のスタイルも調整します。これは要素の高さ調整と<tt>margin</tt>・<tt>padding</tt>を使って要素内外にある隙間を調整すれば、間延びした見た目ではなくなります。</p>
 <div class="emlist-code">
 <pre class="emlist">/* サイトのヘッダー */
 #ll-header {
@@ -288,8 +288,8 @@
 </div>
 
 <h2><a id="h3-9"></a><span class="secno">3.9　</span>グローバルナビゲーションの見た目をよくする</h2>
-<p>次に、グローバルナビゲーションへスタイルを適用します。グローバルナビゲーションは、Bootstrapのスタイル定義をそのまま使った場合、高さがそれなりにあります。これをラブライブ!参加者募集サイトの見た目に合わせるため、<tt>min-height: 0;</tt>と指定して、グローバルナビゲーションの高さを狭めておきます。</p>
-<p>また今回のラブライブ!参加者募集サイトは、全て大文字でグローバルナビゲーション内の文字が書かれています。そのためグローバルナビゲーション内の各要素に対し、<tt>text-transform: uppercase;</tt>と指定して、グローバルナビゲーション内の文字を全て大文字にします。他のスタイル定義に関しては、Bootstrapで定義されているスタイルを打ち消すための指定となります。</p>
+<p>グローバルナビゲーションへスタイルを適用します。グローバルナビゲーションは、Bootstrapのスタイル定義をそのまま使った場合、高さがそれなりにあります。これをラブライブ!参加者募集サイトの見た目に合わせるため、<tt>min-height: 0;</tt>と指定して、グローバルナビゲーションの高さを狭めておきます。</p>
+<p>今回のラブライブ!参加者募集サイトは、全て大文字でグローバルナビゲーション内の文字が書かれています。そのためグローバルナビゲーション内の各要素に対し<tt>text-transform: uppercase;</tt>と指定して、グローバルナビゲーション内の文字を全て大文字にします。他のスタイル定義に関しては、Bootstrapで定義されているスタイルを打ち消すための指定となります。</p>
 <div class="emlist-code">
 <pre class="emlist">/* サイトのグローバルナビゲーション */
 #ll-nav {
@@ -324,7 +324,7 @@
 }
 </pre>
 </div>
-<p>さらに元のデザインに合わせるため、グローバルナビゲーションで現在開いているページを示すセレクター（<tt>.ll-active</tt>）に対し、背景色や前景色を指定します。次に選択できないことを示すため、<tt>cursor: default;</tt>としてマウスカーソルの形を矢印にします。またリンクをマウスカーソルで押したらリンク先に飛ぶというマウスイベントが起こらないように、<tt>pointer-events: none;</tt>の指定でマウスイベント無効化をします。</p>
+<p>元のデザインに合わせるため、現在開いているページを示すセレクター（<tt>.ll-active</tt>）に対し、背景色や前景色を指定します。さらに選択できないことを示すため<tt>cursor: default;</tt>としてマウスカーソルの形を矢印にします。またリンクをマウスカーソルで押したらリンク先に飛ぶというマウスイベントが起こらないように、<tt>pointer-events: none;</tt>の指定でマウスイベント無効化をします。</p>
 <div class="emlist-code">
 <pre class="emlist">/* グローバルナビゲーションの現在位置のスタイルを改善する */
 #ll-nav .ll-active &gt; a {
@@ -336,7 +336,7 @@
 }
 </pre>
 </div>
-<p>最後に現在開いているページをグローバルナビゲーション上で分かりやすくするため、下部に黄色の線を引きます。これで、共通構造のマークアップは終わりです。</p>
+<p>最後に現在開いているページをグローバルナビゲーション上で分かりやすくするため、下部に黄色の線を引きます。これで共通構造のマークアップは終わりです。</p>
 <div class="emlist-code">
 <pre class="emlist">/* グローバルナビゲーションの現在位置を示すスタイル */
 #ll-nav .ll-active &gt; a::after {
@@ -419,7 +419,7 @@
 }
 </pre>
 </div>
-<p>スクリーンショットは次のとおりになります。細部は違いますが、CSSでいろいろ調整したぶん、元のアニメキャプチャ画像に似てきたと思います。</p>
+<p>スクリーンショットは次のとおりになります。細部は違いますが、CSSでいろいろ調整した分、元のアニメキャプチャ画像に似てきたと思います。</p>
 <div id="common-elements" class="image">
 <img src="images/ch03/common-elements.jpg" alt="CSSで調整したサイト" />
 <p class="caption">
