[ci skip] Update with 093255b

--- a/book/ch03.html
+++ b/book/ch03.html
@@ -45,9 +45,9 @@
 <li>グローバルナビゲーション</li>
 <li>フッター</li>
 </ul>
-<p>これら共通構造にサイトの各ページへたどれるリンクを置くことで、どのページからもサイト内にあるページへ行くことができます。そのため、今回のような多岐に渡る情報を提供するサイトでは、ヘッダー・グローバルナビゲーション・フッターの3つがだいたいあります。</p>
-<p>また、ヘッダー・グローバルナビゲーション・フッターを使ったサイト構成は多く見られるため、訪問者も見慣れていることが期待できます。つまりどこに主となる情報があり、ナビゲーションはどこにあるか、初めてサイトへ来た人にも分かってもらえるという効果も期待できます。</p>
-<p>特に今回は主に見てもらいたい層として、スクールアイドルというコンピューター・リテラシーが一定ではない人たちのため、分かりやすさ重視にしたと思われます。</p>
+<p>これら共通構造にサイトの各ページへたどれるリンクを置くことで、どのページからもサイト内にあるページへ行くことができます。そのため今回のような多岐に渡る情報を提供するサイトでは、だいたいヘッダー・グローバルナビゲーション・フッターの3つがあります。</p>
+<p>またヘッダー・グローバルナビゲーション・フッターを使ったサイト構成は多く見られるため、訪問者も見慣れていることが期待できます。つまりどこに主となる情報があり、ナビゲーションはどこにあるか、初めてサイトへ来た人にも分かってもらえるという効果も期待できます。</p>
+<p>特に今回は、主に見てもらいたい層としてスクールアイドルというコンピューター・リテラシーが一定ではない人たちのため、分かりやすさ重視にしたと思われます。</p>
 <div id="lovelive-screenshot-top" class="image">
 <img src="images/ch03/lovelive-screenshot-top.jpg" alt="トップページ（ラブライブ！第2期 1話より）© プロジェクトラブライブ！" />
 <p class="caption">
