--- a/book/ch01.html
+++ b/book/ch01.html
@@ -46,8 +46,8 @@
 </ul>
 <p>それぞれ大まかではなく細かく書いたほうがいいです。</p>
 
-<h3><a id="h1-1-1"></a>なぜ要件定義をするのか</h3>
-<p>最初に要件定義をすることで「これも入れたい」といった思いつきのアイデアに影響されず、作業が巻き戻ることを最小限に抑えられます。これによりサイトをより良い物にする作業へ時間を割く事ができます。</p>
+<h3><a id="h1-1-1"></a>要件定義をする理由</h3>
+<p>最初に要件定義をすることで「これも入れたい」といった思いつきのアイデアに影響されず、作業が巻き戻ることを最小限に抑えられます。これにより、サイトをより良い物にする作業へ時間を割く事ができます。</p>
 
 <h3><a id="h1-1-2"></a>ラブライブ!参加者募集サイトの要件定義</h3>
 <p>では実際に要件定義をしていきます。まずどんなサイトを作るかというところから始めます。今回は「ラブライブ!」というアイドルコンテストの参加者募集サイトを作ります。</p>
@@ -139,9 +139,9 @@
 <p>ワイヤーフレームはサイト内にある要素の種類・数・位置を示す物です。仕様書は要素の具体的な表示方法や演出をどうするか明記する物です。場合によっては、ワイヤーフレームと仕様書両方をまとめたり分けて書きます。</p>
 <p>サイトの内容が豊かであればあるほど仕様書も内容は多くなります。その時は分けて書くことをおすすめします。また1ページごとにワイヤーフレームと仕様書は必要です。</p>
 <p>ワイヤーフレームはPowerPointとExcelのどちらか好きなほうを使います。仕様書はExcelをおすすめします。ワイヤーフレームや仕様書は作る際に3つ気をつけたいことがあります。それらを、ひとつずつ解説していきます。</p>
-<p>気をつける事のひとつ目として、要素は色もしくは形で分けるように書くことです。ワイヤーフレームの要素は大きく分けて画像・テキスト・ボタンの3種類に分けられます。さらに動作の要素を入れると、スクロール・ポップアップなどがあります。これらを見分けがつくように分けて書くことをおすすめします。</p>
-<p>気をつけることのふたつ目として、ワイヤーフレームに余計な情報を入れないということです。ワイヤーフレームはあくまで要素がページ内のどこにあるか示す資料です。そのため色など不要な情報はなるべく入れないほうがいいです。なぜならデザイナーはグラフィックとUIの制作に、参考資料としてワイヤーフレームを使うためです。余計な情報があると資料は分かりづらくなり混乱を招きます。グラフィックやUIの方向性を決めるのはアートディレクターの仕事なので、企画資料としては見やすいようにすることが最優先です。</p>
-<p>気をつけることの3つ目として、仕様書は箇条書きにすることです。それぞれの要素・動作に対して、箇条書きする必要があります。仕様書を見るエンジニアにとって不明な点がない状態でコーディングできるよう目指します。</p>
+<p>はじめに気をつける事として、要素は色もしくは形で分けるように書くことです。ワイヤーフレームの要素は大きく分けて画像・テキスト・ボタンの3種類に分けられます。さらに動作の要素を入れると、スクロール・ポップアップなどがあります。これらを見分けがつくように分けて書くことをおすすめします。</p>
+<p>次に気をつける事として、ワイヤーフレームに余計な情報を入れないということです。ワイヤーフレームはあくまで要素がページ内のどこにあるか示す資料です。そのため色など不要な情報はなるべく入れないほうがいいです。なぜならデザイナーはグラフィックとUIの制作に、参考資料としてワイヤーフレームを使うためです。余計な情報があると資料は分かりづらくなり混乱を招きます。グラフィックやUIの方向性を決めるのはアートディレクターの仕事なので、企画資料としては見やすいようにすることが最優先です。</p>
+<p>最後に気をつける事として、仕様書は箇条書きにすることです。それぞれの要素・動作に対して、箇条書きする必要があります。仕様書を見るエンジニアにとって不明な点がない状態でコーディングできるよう目指します。</p>
 
 <h2><a id="h1-5"></a><span class="secno">1.5　</span>今回のワイヤーフレームと仕様書について</h2>
 <p>要件定義の段階で判明していましたが今回はページ数・要素共に少ないです。そのためワイヤーフレームと仕様書をまとめて書きました。1ページずつ見ていきましょう。</p>
