--- a/book/ch02.html
+++ b/book/ch02.html
@@ -48,11 +48,10 @@
 <p>これらについて、ひとつずつ説明していきます。</p>
 
 <h3><a id="h2-1-1"></a>エディターやIDE</h3>
-<p>必要な物のひとつ目として、ソースコードを書くためにエディターやIDE（統合開発環境）を用意します。</p>
-<p>エディターはWindow・OS X共にAtomやSublime Textがよく使われています。IDEはWebStormやNetBeansがよく使われています。またWindowsであればVisual Studio Community EditionがおすすめのIDEです。</p>
+<p>はじめに、ソースコードを書くためのエディターやIDE（統合開発環境）を用意します。エディターはWindow・OS X共にAtomやSublime Textがよく使われています。IDEはWebStormやNetBeansがよく使われています。またWindowsであればVisual Studio Community EditionがおすすめのIDEです。</p>
 
 <h3><a id="h2-1-2"></a>ブラウザー</h3>
-<p>必要な物のふたつ目として、サイトを表示確認するためにブラウザーの用意をします。WindowsやOS Xには次のブラウザーが最初からインストールされています。</p>
+<p>次に、サイトを表示確認するためにブラウザーの用意をします。WindowsやOS Xには次のブラウザーが最初からインストールされています。</p>
 <p>しかしサイト開発ではこれらのブラウザーだけではなく、複数ブラウザーで表示を確認する必要があります。他にインストールしておいたほうが良いブラウザーはGoogle ChromeやMozilla Firefoxがあります。できれば開発者向けに提供されている開発版をインストールしたほうが、事前に次期バージョンでハマりそうな点が分かるのでおすすめです。</p>
 <ul>
 <li>Windows<ul>
@@ -66,7 +65,7 @@
 </ul>
 
 <h3><a id="h2-1-3"></a>GitとGitHub</h3>
-<p>必要な物の3つ目として、作業履歴を管理するためにGitとGitHubを用意します。たとえば突然PCがブルースクリーンになってしまい、予期しないシャットダウンをしなければいけなくなったとします。その時Gitに作業履歴が残っていれば、かなり前の作業まで遡ってしまうことが少なくなります。GitはSourceTreeをダウンロードして使うのが良いでしょう。もしGitについてあまり知らない場合は、拙著のSteins;Gitを読んでみてください。</p>
+<p>最後に、作業履歴を管理するためGitとGitHubを用意します。たとえば突然PCがブルースクリーンになってしまい、予期しないシャットダウンをしなければいけなくなったとします。その時Gitに作業履歴が残っていれば、かなり前の作業まで遡ってしまうことが少なくなります。GitはSourceTreeをダウンロードして使うのが良いでしょう。もしGitについてあまり知らない場合は、拙著のSteins;Gitを読んでみてください。</p>
 
 <h2><a id="h2-2"></a><span class="secno">2.2　</span>分からないことがあった時には？</h2>
 <p>サイトの実装をしていくうちに、分からないところが出てくる場合もあります。</p>
@@ -74,11 +73,11 @@
 <p>そういった際どのように解決するかを書きます。</p>
 
 <h3><a id="h2-2-1"></a>検索する</h3>
-<p>まずは検索します。検索した時に結果が出やすい手法は3つあります。</p>
-<p>手法のひとつ目として<tt>CSSで背景色をつけるやり方</tt>と検索するより、<tt>CSS 背景色 やり方</tt>のように単語で区切るほうが検索結果の件数は増えます。検索エンジンは<tt>CSSで背景色をつけるやり方</tt>のような文章が苦手です。そのため文章よりも単語ごとに区切ったほうが検索結果の件数は増えます。</p>
+<p>まずは検索します。検索した時に結果が出やすい手法はいくつかあります。</p>
+<p>はじめに、<tt>CSSで背景色をつけるやり方</tt>と検索するより、<tt>CSS 背景色 やり方</tt>のように単語で区切るほうが検索結果の件数は増えます。検索エンジンは<tt>CSSで背景色をつけるやり方</tt>のような文章が苦手です。そのため文章よりも単語ごとに区切ったほうが検索結果の件数は増えます。</p>
 <p>また、より入門的な内容を探したい場合<tt>○○ とは</tt>で検索するのがいいです。理由は入門的な記事のタイトルが<tt>○○ とは</tt>と書く傾向にあるためです。たとえばJavaScriptの初心者向け記事を探したい場合は<tt>JavaScript とは</tt>といった感じで検索します。</p>
-<p>手法のふたつ目として、JavaScriptでエラーメッセージが出力された場合、エラーメッセージをそのまま検索することです。エラーメッセージをそのまま検索することで、解決方法が出てきやすいです。しかしだいたい英語（そしてほとんどStack Overflowというサイト）なので、そこは頑張って内容を読み取るしかないです。</p>
-<p>手法の3つ目として、Google検索結果内にある<tt>検索ツール - 期間指定</tt>を使ってなるべく新しい情報のみ検索します。CSSやJavaScriptは2011年以前の情報があまり役に立ちません。期間を絞ることで新しい情報にたどりつきやすくします。</p>
+<p>次に、JavaScriptでエラーメッセージが出力された場合、エラーメッセージをそのまま検索することです。エラーメッセージをそのまま検索することで、解決方法が出てきやすいです。しかしだいたい英語（そしてほとんどStack Overflowというサイト）なので、そこは頑張って内容を読み取るしかないです。</p>
+<p>最後に、Google検索結果内の<tt>検索ツール - 期間指定</tt>を使ってなるべく新しい情報のみ検索します。CSSやJavaScriptは2011年以前の情報があまり役に立ちません。期間を絞ることで新しい情報にたどりつきやすくします。</p>
 <p>しかし、初期状態では期間設定の使い勝手があまりよくありません。具体的には期間設定が<tt>1ヶ月</tt>の後は<tt>1年</tt>となってしまうため<tt>3ヶ月以内</tt>などは指定できません。これに関しては<a href="https://chrome.google.com/webstore/detail/add-search-options/kaifgnoibnjldmdkkfogenbfbfgcbiao?hl=ja" class="link">Add Search Options</a>というGoogle Chrome拡張機能を使います。この拡張機能を使うことにより、期間指定に<tt>3ヶ月以内</tt>と<tt>6ヶ月以内</tt>が増えます。</p>
 
 <h3><a id="h2-2-2"></a>周りの人に聞く</h3>
@@ -97,21 +96,21 @@
 <p>ライブラリについて説明したところで、自分がライブラリを選ぶ時の基準について、いくつか書きます。</p>
 
 <h4><a id="h2-3-2-1"></a>利用実績</h4>
-<p>基準のひとつ目として、そのライブラリが広く使われているかを見ます。広く使われていれば、ライブラリを使う上で何か困って検索をしたときに情報が出てきやすいためです。</p>
+<p>はじめに、そのライブラリが広く使われているかを見ます。広く使われていれば、ライブラリを使う上で何か困って検索をしたときに情報が出てきやすいためです。</p>
 <p>たとえばCSSのライブラリである<a href="http://getbootstrap.com/" class="link">Bootstrap</a>だとページ下部にBootstrapを使ったサイト一覧が掲載されています。JavaScriptのライブラリである<a href="http://jquery.com/" class="link">jQuery</a>は<a href="http://www.amazon.co.jp/s/field-keywords=jquery" class="link">Amazon上でjQueryで検索</a>するとjQuery関連の本が大量に表示されます。</p>
 <p>このように、利用実績やライブラリについて本が書かれているかということをまず見ます。</p>
 
 <h4><a id="h2-3-2-2"></a>Issue・Pull Request、そして最新コミット日時</h4>
-<p>基準のふたつ目として、GitHub上にあるIssueやPull Requestの件数と最新コミット日時です。利用実績で見るのは公開されてからある程度時間が経過し、広く使われるようになったライブラリのみ使える判断材料です。つまり定番と言われるライブラリに対してのみ判断材料として使えます。</p>
+<p>次に、GitHub上にあるIssueやPull Requestの件数と最新コミット日時です。利用実績で見るのは公開されてからある程度時間が経過し、広く使われるようになったライブラリのみ使える判断材料です。つまり定番と言われるライブラリに対してのみ判断材料として使えます。</p>
 <p>そこでIssueやPull Requestの件数と最新コミット日時を見ます。たとえば最新コミット日が6か月前だった場合、IssueやPull Requestの多さは「放置されているから」ということになります。放置されたライブラリを使う場合、自分達でなんとかしないといけなくなる場面が増えてしまいます。</p>
 <p>自分達でなんとかするのであればいいですが、そうでない場合は活発なライブラリを選ぶのがいいです。</p>
 
 <h4><a id="h2-3-2-3"></a>ソースコードの流れを把握しやすい</h4>
-<p>基準の3つ目として、ソースコードの流れを把握しやすいか見ます。何か困ったときにドキュメントを見ますが、それでも解決できない場合はソースコードを読む必要があるためです。その時にソースコードの流れを把握できなかった場合、解決方法が見つからずつらくなります。</p>
+<p>次に、ソースコードの流れを把握しやすいか見ます。何か困ったときにドキュメントを見ますが、それでも解決できない場合はソースコードを読む必要があるためです。その時にソースコードの流れを把握できなかった場合、解決方法が見つからずつらくなります。</p>
 <p>全体把握しやすいライブラリとしてたとえば<a href="http://backbonejs.org/" class="link">Backbone.js</a>が挙げられます。<a href="https://github.com/jashkenas/backbone/blob/master/backbone.js" class="link">ソースコード</a>はまとまりの単位が小さいため流れを追いやすいです。ソースコードの行数も1,877行（2015/7/10現在）なので全体を読もうと思えば読めます。</p>
 
 <h4><a id="h2-3-2-4"></a>ドキュメントがそろっている</h4>
-<p>基準の4つ目として、ライブラリにドキュメントがあり、かつ読みやすいかを見ます。もちろん両方そろっているのが好ましいです。両方そろっている例としては<a href="http://hokaccha.github.io/js-flipsnap/" class="link">flipsnap.js</a>が挙げられます。</p>
+<p>最後に、ドキュメントがあり、かつ読みやすいかを見ます。もちろん両方そろっているのが好ましいです。両方そろっている例としては<a href="http://hokaccha.github.io/js-flipsnap/" class="link">flipsnap.js</a>が挙げられます。</p>
 <p>flipsnap.jsはドキュメントに次の項目がよくまとまっています。そのため使い方に困らないライブラリとなっています。</p>
 <ul>
 <li>どういった環境に対応しているか</li>
@@ -128,7 +127,7 @@
 <h2><a id="h2-5"></a><span class="secno">2.5　</span>ライブラリの選定JavaScript編</h2>
 <p>次にJavaScriptのライブラリを選定していきます。今回JavaScript側で実装する機能として、カルーセルがあります。</p>
 <p>カルーセルは<a href="http://www.nike.com/jp/ja_jp/" class="link">Nike</a> などで使われている「注目させたい複数の画像などをつぎつぎと横にスライド表示する」ものです。このカルーセルを実現するためのライブラリは<a href="http://kenwheeler.github.io/slick/" class="link">slick</a>にします。slickを使うために<a href="http://jquery.com/" class="link">jQuery</a>も使います。</p>
-<p>選定した理由は2つあります。ひとつ目として、ドキュメントがそろっておりカルーセルを実装する時に困らないためです。これによりやりたい事がすぐ実現できます。ふたつ目として、slickは開発が活発な事です。ただ互換性がない更新も起こるので最新版に更新する際は注意が必要です。</p>
+<p>選定した理由は2つあります。ひとつめとして、ドキュメントがそろっておりカルーセルを実装する時に困らないためです。これによりやりたい事がすぐ実現できます。ふたつめとして、slickは開発が活発な事です。ただ互換性がない更新も起こるので最新版に更新する際は注意が必要です。</p>
 <p>なお、カルーセルでの表示に無限ループがいらなければ<a href="http://hokaccha.github.io/js-flipsnap/" class="link">flipsnap.js</a>もおすすめです。jQueryに依存するライブラリでは他に<a href="http://owlgraphic.com/owlcarousel/" class="link">Owl Carousel</a>がよく使われます。</p>
 <p>これでライブラリの選定が終わりました。次章からはサイトの実装をしていきます。</p>
 
