[ci skip] Update with 858ebc8

--- a/book/ch03.html
+++ b/book/ch03.html
@@ -158,7 +158,7 @@
 
 <h2><a id="h3-5"></a><span class="secno">3.5　</span>グローバルナビゲーションのマークアップ</h2>
 <p>グローバルナビゲーションは、サイト内の主要なページへリンクしているものです。</p>
-<p>はじめにnav要素で全体を囲みます。nav要素は主要なページへリンクしている箇所で使われる要素となります。各要素の<tt>class</tt>属性にはBootstrapで定義されているクラス名を定義します。先ほどと同じく今回作らないページについては、図のように<tt>a</tt>要素の<tt>href</tt>属性に<tt>#</tt>を入れておきます。</p>
+<p>はじめに<tt>nav</tt>要素で全体を囲みます。<tt>nav</tt>要素は主要なページへリンクしている箇所で使われる要素となります。各要素の<tt>class</tt>属性にはBootstrapで定義されているクラス名を定義します。先ほどと同じく今回作らないページについては、図のように<tt>a</tt>要素の<tt>href</tt>属性に<tt>#</tt>を入れておきます。</p>
 <p>現在見ているページを示すためのクラス名として、Top部分に<tt>ll-active</tt>というクラス名を付けています。<tt>ll-active</tt>内でBootstrapが<tt>active</tt>に対してスタイル定義しているところを上書きします。</p>
 <div class="emlist-code">
 <pre class="emlist">&lt;nav id=&quot;ll-nav&quot; class=&quot;navbar navbar-inverse&quot;&gt;
