[ci skip] Update with 7f873fc

--- a/book/ch02.html
+++ b/book/ch02.html
@@ -48,7 +48,7 @@
 <p>これらについて、ひとつずつ説明していきます。</p>
 
 <h3><a id="h2-1-1"></a>エディターやIDE</h3>
-<p>はじめに、ソースコードを書くためのエディターやIDE（統合開発環境）を用意します。エディターはWindow・OS X共にAtomやSublime Textがよく使われています。IDEはWebStormやNetBeansがよく使われています。またWindowsであればVisual Studio Community EditionがおすすめのIDEです。</p>
+<p>はじめに、ソースコードを書くためのエディターもしくはIDE（統合開発環境）を用意します。エディターはWindow・OS X共にAtomやSublime Textがよく使われています。IDEはWebStormやNetBeansがよく使われています。またWindowsであればVisual Studio Community EditionがおすすめのIDEです。</p>
 
 <h3><a id="h2-1-2"></a>ブラウザー</h3>
 <p>次に、サイトを表示確認するためにブラウザーの用意をします。WindowsやOS Xには次のブラウザーが最初からインストールされています。</p>
