[ci skip] Update with afd50e1

--- a/book/ch02.html
+++ b/book/ch02.html
@@ -47,8 +47,10 @@
 </ul>
 <p>これらについて、ひとつずつ説明していきます。</p>
 
-<h3><a id="h2-1-1"></a>エディターやIDE</h3>
-<p>はじめに、ソースコードを書くためのエディターもしくはIDE（統合開発環境）を用意します。エディターはWindow・OS X共にAtomやSublime Textがよく使われています。IDEはWebStormやNetBeansがよく使われています。またWindowsであればVisual Studio Community EditionがおすすめのIDEです。</p>
+<h3><a id="h2-1-1"></a>エディターもしくはIDE</h3>
+<p>はじめに、ソースコードを書くためのエディターもしくはIDE（統合開発環境）を用意します。エディターとIDEですが、エディターはIDEと比べて自分で設定できる部分が多いです。そのため拡張性はエディターのほうが高いです。その分エディターの設定に時間がかかってしまう事もあります。IDEはインストールした時からある程度の設定がされています。その代わりエディターと比べて拡張性は低いです。</p>
+<p>なのでより自分好みの設定にしたい場合はエディターを、設定をいろいろいじるのが面倒な場合はIDEを使うといいです。</p>
+<p>エディターはWindows・OS X共にAtomやSublime Textがよく使われています。IDEはWebStormやNetBeans、Visual Studio Community Editionがよく使われています。</p>
 
 <h3><a id="h2-1-2"></a>ブラウザー</h3>
 <p>次に、サイトを表示確認するためにブラウザーの用意をします。WindowsやOS Xには次のブラウザーが最初からインストールされています。</p>
