[ci skip] Update with 6767bfd

--- a/book/ch02.html
+++ b/book/ch02.html
@@ -53,8 +53,7 @@
 <p>エディターはWindows・OS X共にAtomやSublime Textがよく使われています。IDEはWebStormやNetBeans、Visual Studio Community Editionがよく使われています。</p>
 
 <h3><a id="h2-1-2"></a>ブラウザー</h3>
-<p>次に、サイトを表示確認するためにブラウザーの用意をします。WindowsやOS Xには次のブラウザーが最初からインストールされています。</p>
-<p>しかしサイト開発ではこれらのブラウザーだけではなく、複数ブラウザーで表示を確認する必要があります。他にインストールしておいたほうが良いブラウザーはGoogle ChromeやMozilla Firefoxがあります。できれば開発者向けに提供されている開発版をインストールしたほうが、事前に次期バージョンでハマりそうな点が分かるのでおすすめです。</p>
+<p>次に、サイトを表示確認するためにブラウザーの用意をします。WindowsやOS Xの最新バージョンには次のブラウザーが最初からインストールされています。</p>
 <ul>
 <li>Windows<ul>
 <li>Edge、Internet Explorer</li>
@@ -65,6 +64,8 @@
 </ul>
 </li>
 </ul>
+<p>しかしサイト開発ではこれらのブラウザーだけではなく、他のブラウザーでも表示を確認する必要があります。他にインストールしておいたほうがいいブラウザーは、Google ChromeやMozilla Firefoxがあります。Google ChromeやMozilla Firefoxは、最初からインストールされているブラウザーと比較した場合でも遜色ないもしくは上回るシェアがあります。つまりEdgeやInternet Explorer、Safariだけではサイトを見る人の環境をカバーし切れないため、他のブラウザーもインストールしておく必要があります。</p>
+<p>また開発者向けに提供されている開発版をインストールしたほうが、事前に次期バージョンでハマりそうな点が分かるのでおすすめです。</p>
 
 <h3><a id="h2-1-3"></a>GitとGitHub</h3>
 <p>最後に、作業履歴を管理するためGitとGitHubを用意します。たとえば突然PCがブルースクリーンになってしまい、予期しないシャットダウンをしなければいけなくなったとします。その時Gitに作業履歴が残っていれば、かなり前の作業まで遡ってしまうことが少なくなります。GitはSourceTreeをダウンロードして使うのが良いでしょう。もしGitについてあまり知らない場合は、拙著のSteins;Gitを読んでみてください。</p>
