--- a/book/ch03.html
+++ b/book/ch03.html
@@ -261,7 +261,7 @@
 &lt;/html&gt;
 </pre>
 </div>
-<p>スクリーンショットは次のとおりになります。Bootstrapを読み込んだ上で、Bootstrapに定義されているクラス名を<tt>class</tt>属性へ適宜書いていたため、殺風景ではない見た目になっています。しかし見た目がアニメのキャプチャ画像と違うところがあるため、CSSで微調整をしていきます。</p>
+<p>スクリーンショットは次のとおりになります。Bootstrapを読み込んで、Bootstrapに定義されているクラス名を<tt>class</tt>属性へ書いていたため、それなりの見た目になっています。しかし見た目がアニメのキャプチャ画像と違うところがあるため、CSSで微調整をしていきます。</p>
 <div id="common-html" class="image">
 <img src="images/ch03/common-html.jpg" alt="HTMLだけで作ったサイト" />
 <p class="caption">
