--- a/book/ch04.html
+++ b/book/ch04.html
@@ -36,19 +36,16 @@
             </ul>
 
             <h1><a id="h4"></a><span class="secno">第4章　</span>トップページを作る</h1>
-<p>第3章では共通の構造部分を作っていきました。そこで作ったHTMLを元に、この章ではトップページを作っていきます。</p>
-<p>はじめに、第3章の共通部分ではヘッダーやフッターなどはマークアップしましたが、<tt>main</tt>要素の中身は空だったと思います。この章では、空のままだった<tt>main</tt>要素の中をHTMLでマークアップしていきます。</p>
+<p>第3章では共通の構造部分を作っていきました。そこではヘッダーやフッターなどはマークアップしましたが、<tt>main</tt>要素の中身は空だったと思います。この章では空のままだった<tt>main</tt>要素の中をHTMLでマークアップしていきます。</p>
 <div class="emlist-code">
 <pre class="emlist">&lt;main&gt;
 &lt;/main&gt;
 </pre>
 </div>
 
-<h2><a id="h4-1"></a><span class="secno">4.1　</span>トップページ全体の見た目を整える</h2>
-
-<h2><a id="h4-2"></a><span class="secno">4.2　</span>カルーセル部分のマークアップ</h2>
-<p>まずカルーセル部分のマークアップをしていきます。カルーセルは第2章でも説明しましたが、<a href="http://www.nike.com/jp/ja_jp/" class="link">Nike</a>などで使われている「注目させたい複数の画像などをつぎつぎと横にスライド表示する」ものです。</p>
-<p>今回カルーセルの実装に使う<a href="http://kenwheeler.github.io/slick/" class="link">slick</a>用に次のHTMLを用意します。とはいっても、切り替え表示させる画像を<tt>js_slides ll-slides</tt>というクラスを付けた<tt>div</tt>要素で囲むだけです。</p>
+<h2><a id="h4-1"></a><span class="secno">4.1　</span>カルーセル部分のマークアップ</h2>
+<p>カルーセル部分のマークアップをしていきます。あらためてカルーセルの説明をすると、<a href="http://www.nike.com/jp/ja_jp/" class="link">Nike</a>などで使われている「注目させたい複数の画像などをつぎつぎと横にスライド表示する」ものです。</p>
+<p>今回カルーセルの実装に使う<a href="http://kenwheeler.github.io/slick/" class="link">slick</a>用に次のHTMLを用意します。とはいっても切り替え表示させる画像を<tt>js_slides ll-slides</tt>というクラスを付けた<tt>div</tt>要素で囲むだけです。</p>
 <div class="emlist-code">
 <pre class="emlist">&lt;div class=&quot;js_slides ll-slides&quot;&gt;
   &lt;img src=&quot;images/image_01.jpg&quot; alt=&quot;&quot;&gt;
@@ -57,15 +54,15 @@
 </pre>
 </div>
 
-<h2><a id="h4-3"></a><span class="secno">4.3　</span>ページネーション部分のマークアップ</h2>
-<p>次にカルーセルと連携したページネーション部分のマークアップをしていきます。ページネーションを画像で示すと、図の赤丸部分になります。</p>
+<h2><a id="h4-2"></a><span class="secno">4.2　</span>ページネーション部分のマークアップ</h2>
+<p>カルーセルと連携したページネーション部分のマークアップをしていきます。ページネーションを画像で示すと、図の赤丸部分になります。</p>
 <div id="pagination" class="image">
 <img src="images/ch04/pagination.jpg" alt="ページネーション（ラブライブ！第2期 1話より）© プロジェクトラブライブ！" />
 <p class="caption">
 図4.1: ページネーション（ラブライブ！第2期 1話より）© プロジェクトラブライブ！
 </p>
 </div>
-<p>アニメではフッター部分に入っているページネーションですが、フッター内にページネーションを含める実装はあまり見ないものです。そのため今回は<tt>main</tt>要素内へ、ページネーションを含めるようにします。</p>
+<p>アニメではフッター部分に入っているページネーションですが、フッター内にページネーションを含める実装はあまり見ません。そのため<tt>main</tt>要素内へ、ページネーションを含めるようにします。</p>
 <p>ページネーションは表示される順番が決まっているため、意図的に順序づけられた項目リストを示す<tt>ol</tt>要素を使います。ページネーションは後ほどCSSでスタイルを適用したり、JavaScriptでカルーセルと連携させたりします。</p>
 <div class="emlist-code">
 <pre class="emlist">&lt;ol class=&quot;js_slides-pagination ll-slides-pagination&quot;&gt;
@@ -75,42 +72,8 @@
 </pre>
 </div>
 
-<h2><a id="h4-4"></a><span class="secno">4.4　</span>カルーセルの見た目を整える</h2>
-<p>カルーセルに使う要素の見た目を整えます。スタイル定義は簡単で、ウィンドウの描画領域が狭いときに画像をはみ出させないよう、<tt>max-width</tt>というプロパティで要素幅の最大値を指定します。</p>
-<div class="emlist-code">
-<pre class="emlist">/* トップページ：カルーセル内の画像 */
-.ll-slides img {
-  max-width: 100%;
-}
-</pre>
-</div>
-<p>次に、カルーセルと連携させるページネーションの見た目を整えます。ここで適用するCSSは次のとおりになります。</p>
-<p>ページネーションのマークアップに<tt>ol</tt>要素を使っているため、●の左横に数字が表示されています。その左横の数字を消すために、<tt>.ll-slides-pagination</tt>に対して<tt>list-style-type: none;</tt>と指定し、数字を無くします。</p>
-<p>あとはページネーションを中央寄せかつ横並びに表示したり、前景色の指定をしています。</p>
-<div class="emlist-code">
-<pre class="emlist">/* トップページ：カルーセル連携ページネーションの外枠 */
-.ll-slides-pagination {
-  list-style-type: none;
-  text-align: center;
-}
-
-/* トップページ：カルーセル連携ページネーションの各要素 */
-.ll-slides-pagination li {
-  display: inline-block;
-  color: #ff64b1;
-}
-
-/* トップページ：カルーセル連携ページネーションの現在のページを示す要素 */
-.ll-slides-pagination .ll-slides-pagination__active {
-  color: #fff;
-}
-</pre>
-</div>
-
-<h2><a id="h4-5"></a><span class="secno">4.5　</span>ここまでのHTML・CSSまとめ</h2>
-<p>トップページのHTML・CSSについてはこれで完成です。ここまでのHTML・CSSをまとめると次のとおりになります。</p>
-
-<h3><a id="h4-5-1"></a>トップページのHTML</h3>
+<h2><a id="h4-3"></a><span class="secno">4.3　</span>ここまでのHTMLまとめ</h2>
+<p>トップページのHTMLについてはこれで完成です。ここまでのHTMLをまとめると次のとおりになります。</p>
 <div class="emlist-code">
 <pre class="emlist">&lt;!DOCTYPE html&gt;
 &lt;html&gt;
@@ -184,93 +147,41 @@
 </pre>
 </div>
 
-<h3><a id="h4-5-2"></a>トップページのCSS</h3>
+<h2><a id="h4-4"></a><span class="secno">4.4　</span>カルーセルの見た目を整える</h2>
+<p>カルーセルに使う要素の見た目を整えます。スタイル定義は簡単でウィンドウの描画領域が狭いときに画像をはみ出させないよう、<tt>max-width</tt>というプロパティで要素幅の最大値を指定します。</p>
 <div class="emlist-code">
-<pre class="emlist">/* サイトのヘッダー */
-#ll-header {
-  margin-bottom: 0;
+<pre class="emlist">/* トップページ：カルーセル内の画像 */
+.ll-slides img {
+  max-width: 100%;
+}
+</pre>
+</div>
+<p>次に、カルーセルと連携させるページネーションの見た目を整えます。ここで適用するCSSは次のとおりになります。</p>
+<p>ページネーションのマークアップに<tt>ol</tt>要素を使っているため、●の左横に数字が表示されています。その左横の数字を消すために<tt>.ll-slides-pagination</tt>に対して<tt>list-style-type: none;</tt>と指定して数字を無くします。</p>
+<p>あとはページネーションを中央寄せかつ横並びに表示したり、前景色の指定をしています。</p>
+<div class="emlist-code">
+<pre class="emlist">/* トップページ：カルーセル連携ページネーションの外枠 */
+.ll-slides-pagination {
+  list-style-type: none;
+  text-align: center;
 }
 
-/* サイトのロゴ */
-#ll-header .ll-logo {
-  height: auto;
-  margin-top: 15px;
-  padding: 15px;
+/* トップページ：カルーセル連携ページネーションの各要素 */
+.ll-slides-pagination li {
+  display: inline-block;
+  color: #ff64b1;
 }
 
-/* サイトのグローバルナビゲーション */
-#ll-nav {
-  min-height: 0;
-  margin-bottom: 0;
-  border-width: 0;
-}
-
-/* サイトのグローバルナビゲーション内の各アイテム */
-#ll-nav li {
-  margin-right: 0;
-}
-
-/* サイトのグローバルナビゲーション内の各リンク */
-#ll-nav li &gt; a {
-  margin-top: 0;
-  margin-bottom: 0;
-  border-radius: 0;
-  color: #fff;
-  text-transform: uppercase;
-}
-/* グローバルナビゲーションの各描画領域ごとのスタイル定義 */
-@media (min-width: 768px) {
-  #ll-nav li &gt; a {
-    padding: 0.75em 1.5em;
-    border-right: 1px solid #fff;
-  }
-
-  #ll-nav li:first-child &gt; a {
-    border-left: 1px solid #fff;
-  }
-}
-@media (min-width: 890px) {
-  #ll-nav li &gt; a {
-    padding: 0.75em 2em;
-  }
-}
-@media (min-width: 1000px) {
-  #ll-nav li &gt; a {
-    padding: 0.75em 2.5em;
-  }
-}
-@media (min-width: 1150px) {
-  #ll-nav li &gt; a {
-    padding: 0.75em 3.2em;
-  }
-}
-@media (min-width: 1330px) {
-  #ll-nav li &gt; a {
-    padding: 0.75em 4em;
-  }
-}
-
-/* グローバルナビゲーションの現在位置を示すスタイル */
-#ll-nav .active &gt; a {
-  position: relative;
-  pointer: default;
-  pointer-events: none;
-  background-color: #ff50ac;
+/* トップページ：カルーセル連携ページネーションの現在のページを示す要素 */
+.ll-slides-pagination .ll-slides-pagination__active {
   color: #fff;
 }
+</pre>
+</div>
 
-/* グローバルナビゲーションの現在位置を示すスタイル */
-#ll-nav .active &gt; a::after {
-  content: &quot;&quot;;
-  display: block;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  border-bottom: 5px solid #ffdc00;
-}
-
-/* トップページ：カルーセル内の画像 */
+<h3><a id="h4-4-1"></a>トップページのCSS</h3>
+<div class="emlist-code">
+<pre class="emlist">/* トップページ：カルーセル内の画像 */
 .ll-slides img {
   max-width: 100%;
 }
@@ -294,24 +205,11 @@
 </pre>
 </div>
 
-<h2><a id="h4-6"></a><span class="secno">4.6　</span>JavaScriptを使ってカルーセルの実装をする</h2>
+<h2><a id="h4-5"></a><span class="secno">4.5　</span>JavaScriptを使ってカルーセルの実装をする</h2>
 <p>トップページのHTMLマークアップやCSSによるスタイル適用が終わったので、JavaScriptを使ってカルーセルの実装をします。</p>
-
-<h2><a id="h4-7"></a><span class="secno">4.7　</span>JavaScriptの準備</h2>
-<p>はじめに、JavaScriptのソースコード全体を<tt>(function() { ... });</tt>で囲みます。理由は、定義した変数や関数が他のJavaScriptと競合しないようにするためです。<tt>(function() { ... })();</tt>を書かなかった場合、他のJavaScriptと競合してしまい正常に動作しなくなる場合があります。</p>
-<p>またjQueryを使う場合は<tt>(function() { ... })();</tt>の前に<tt>$</tt>を書きます。つまり<tt>$(function() { ... })();</tt>と書きます。<tt>$</tt>を書く理由は、ブラウザーがHTMLを読み込んで解釈した後にJavaScriptを実行させるためです。HTMLを解釈した後にJavaScriptの実行をしないと、JavaScript内でHTMLの要素を取得できない可能性があるためです。</p>
-<p>また、<tt>$(function() { ... })();</tt>の中には<tt>&quot;use strict&quot;;</tt>という文字列を書いています。これは、JavaScriptでやってしまうミスの一部をエラーとして検出してくれるものです。将来に備えていくつかの単語を使えなくする（たとえば<tt>let</tt>や<tt>yield</tt>など）効果もあるので、<tt>&quot;use strict&quot;;</tt>は書いても損はありません。</p>
-<p>これらをまとめると次のソースコードになります。</p>
-<div class="emlist-code">
-<pre class="emlist">$(function() {
-  &quot;use strict&quot;;
-
-  // ここにソースコードを書いていく
-});
-</pre>
-</div>
-<p>ここまで書いたところで、<tt>$(function() { ... })();</tt>の中に書くソースコードについて説明していきます。ただ、ソースコードを書き始める前に、処理の流れを洗い出しておきしょう。今回は次の流れでカルーセルやカルーセルと連携したページネーション（以下ページネーション）を実装していきます。</p>
+<p>JavaScriptを書き始める前に、処理の流れを洗い出しておきしょう。今回は次の流れでカルーセルやカルーセルと連携したページネーション（以下ページネーション）を実装していきます。</p>
 <ol>
+<li>他のJavaScriptと競合しないようにする</li>
 <li>カルーセルのためにHTML要素を取得する</li>
 <li>カルーセルの実装をする</li>
 <li>ページネーションの実装をする</li>
@@ -321,9 +219,23 @@
 </ol>
 <p>処理の流れを洗い出したところで、上から順に説明します。</p>
 
-<h2><a id="h4-8"></a><span class="secno">4.8　</span>カルーセルで使うためにHTMLの要素を取得する</h2>
-<p>はじめに、JavaScriptでHTMLの要素を扱えるようにします。これはjQueryの<tt>$</tt>関数を使って、HTMLの要素をJavaScriptから次のとおり取得します。</p>
-<p>準備の節では、ブラウザーがJavaScriptをHTMLの解釈後に実行するため<tt>$</tt>関数を使いました。ここでは、HTMLの要素をJavaScriptで利用できるようにするため<tt>$</tt>関数を使います。jQueryの<tt>$</tt>関数はこのように万能なものとなります。</p>
+<h2><a id="h4-6"></a><span class="secno">4.6　</span>他のJavaScriptと競合しないようにする</h2>
+<p>はじめに定義した変数や関数が他のJavaScriptと競合しないようにするため、JavaScriptのソースコード全体を<tt>(function() { ... });</tt>で囲みます。<tt>(function() { ... })();</tt>を書かなかった場合、他のJavaScriptと競合してしまい正常に動作しなくなる場合があります。</p>
+<p>jQueryを使う場合は<tt>(function() { ... })();</tt>の前に<tt>$</tt>を書きます。つまり<tt>$(function() { ... })();</tt>となります。<tt>$</tt>を書く理由はブラウザーがHTMLを読み込んで解釈した後にJavaScriptを実行させるためです。HTMLを解釈した後にJavaScriptの実行をしない場合、JavaScript内でHTMLの要素を取得できない可能性があるためです。</p>
+<p>また、<tt>$(function() { ... })();</tt>の中には<tt>&quot;use strict&quot;;</tt>という文字列を書いています。これはJavaScriptでミスしやすい物の一部をエラーとして検出してくれるものです。将来に備えていくつかの単語を使えなくする（たとえば<tt>let</tt>や<tt>yield</tt>など）効果もあるので、<tt>&quot;use strict&quot;;</tt>は書いても損はありません。</p>
+<p>ここまでをまとめると次のソースコードになります。</p>
+<div class="emlist-code">
+<pre class="emlist">$(function() {
+  &quot;use strict&quot;;
+
+  // ここにソースコードを書いていく
+});
+</pre>
+</div>
+
+<h2><a id="h4-7"></a><span class="secno">4.7　</span>カルーセルのためにHTMLの要素を取得する</h2>
+<p>JavaScriptでHTMLの要素を扱えるようにします。これはjQueryの<tt>$</tt>関数を使って、HTMLの要素をJavaScriptから次のとおり取得します。</p>
+<p>準備の節では、ブラウザーがJavaScriptをHTMLの解釈後に実行するため<tt>$</tt>関数を使いました。ここではHTMLの要素をJavaScriptで利用できるようにするため<tt>$</tt>関数を使います。jQueryの<tt>$</tt>関数はこのように万能なものとなります。</p>
 <div class="emlist-code">
 <pre class="emlist">var carouselE = $(&quot;.js_slides&quot;);
 var paginationE = $(&quot;.js_slides-pagination&quot;);
@@ -331,14 +243,14 @@ var paginationItemElms = $(&quot;.js_slides-pagination li&quot;);
 </pre>
 </div>
 
-<h2><a id="h4-9"></a><span class="secno">4.9　</span>カルーセルの実装をする</h2>
-<p>HTMLの要素を取得できるようにしたら、カルーセルの実装をしていきます。今回カルーセルの実装をする上でslickというライブラリを使っていきます。ここでは次のように、slickを使えるよう初期化する関数と、どのページがいま表示されているか示すための関数を実装します。</p>
-<p>まずカルーセルの元になる<tt>Carousel</tt>関数から説明します。<tt>Carousel</tt>関数ではパラメーターとして、次のふたつがあります</p>
+<h2><a id="h4-8"></a><span class="secno">4.8　</span>カルーセルの実装をする</h2>
+<p>HTMLの要素を取得したらカルーセルの実装をしていきます。今回カルーセルの実装をする上でslickというライブラリを使っていきます。このslickを使えるよう初期化する関数と、どのページがいま表示されているか示すための関数を実装していきます。</p>
+<p>まずカルーセルの元になる<tt>Carousel</tt>関数から説明します。<tt>Carousel</tt>関数はパラメーターとして、次のふたつがあります</p>
 <ul>
 <li>カルーセルの要素を示す<tt>carouselE</tt></li>
 <li>カルーセルの設定を示す<tt>config</tt></li>
 </ul>
-<p>これらのパラメーターを元に、<tt>Carousel</tt>関数でslickが使えるようにします。</p>
+<p>これらのパラメーターを元に<tt>Carousel</tt>関数でslickが使えるようにします。</p>
 <p>次に<tt>currentIndex</tt>を説明します。これはページネーションで使う関数となります。<tt>currentIndex</tt>はカルーセルでいま表示しているページがどこか示す数字を返す関数です。この実装にはslickで定義されている<tt>slickCurrentSlide</tt>という関数を使います。</p>
 <div class="emlist-code">
 <pre class="emlist">function Carousel(carouselE, config) {
@@ -353,14 +265,14 @@ Carousel.prototype.currentIndex = function() {
 </div>
 <p>カルーセルの実装が終わったところで、現在どのページを表示しているのか視覚的に分かりやすくするページネーションの実装をしていきます。</p>
 
-<h2><a id="h4-10"></a><span class="secno">4.10　</span>ページネーションの実装をする</h2>
+<h2><a id="h4-9"></a><span class="secno">4.9　</span>ページネーションの実装をする</h2>
 <p>ページネーションの元になる<tt>CarouselPagination</tt>関数を説明します。<tt>CarouselPagination</tt>関数ではパラメーターとして、次の3つがあります。</p>
 <ul>
 <li>ページネーションの要素を示す<tt>paginationE</tt></li>
 <li>ページネーション内の要素を示す<tt>paginationItemElms</tt></li>
 <li>アクティブなページを示す<tt>activePageName</tt></li>
 </ul>
-<p>これらのパラメーターを元に、<tt>CarouselPagination</tt>関数でページネーションが使えるようにします。あとはカルーセルの表示切り替え時に<tt>activatePage</tt>関数と<tt>deactivatePage</tt>関数を呼び出してページネーションの表示を変えられるようにします。</p>
+<p>これらのパラメーターを元に<tt>CarouselPagination</tt>関数でページネーションが使えるようにします。あとはカルーセルの表示切り替え時に<tt>activatePage</tt>関数と<tt>deactivatePage</tt>関数を呼び出してページネーションの表示を変えられるようにします。</p>
 <div class="emlist-code">
 <pre class="emlist">function CarouselPagination(paginationE, paginationItemElms, activePageName) {
   this.activePageName = activePageName;
@@ -381,9 +293,9 @@ CarouselPagination.prototype.deactivatePage = function() {
 };
 </pre>
 </div>
-<p>次からはいよいよカルーセルやページネーションを動作するようにします。</p>
+<p>いよいよカルーセルやページネーションが動作するようにします。</p>
 
-<h2><a id="h4-11"></a><span class="secno">4.11　</span>カルーセルが動くようにする</h2>
+<h2><a id="h4-10"></a><span class="secno">4.10　</span>カルーセルが動くようにする</h2>
 <p>先ほど実装したカルーセルを次のとおり呼び出して動くようにします。カルーセルの設定として3項目設定します。</p>
 <ul>
 <li>autoplay：カルーセルを自動的にページ送りするか</li>
@@ -399,7 +311,7 @@ CarouselPagination.prototype.deactivatePage = function() {
 </pre>
 </div>
 
-<h2><a id="h4-12"></a><span class="secno">4.12　</span>ページネーションが動くようにする</h2>
+<h2><a id="h4-11"></a><span class="secno">4.11　</span>ページネーションが動くようにする</h2>
 <p>カルーセルと同じように、実装したページネーションを次のとおり呼び出してページネーションを動かします。ページネーションの初期設定として、現在アクティブであることを示すクラス名が最初のドットへ付くようにします。</p>
 <div class="emlist-code">
 <pre class="emlist">var carouselPagination = new CarouselPagination(paginationE, paginationItemElms, &quot;ll-slides-pagination__active&quot;);
@@ -407,7 +319,7 @@ carouselPagination.activatePage(carousel.currentIndex());
 </pre>
 </div>
 
-<h2><a id="h4-13"></a><span class="secno">4.13　</span>カルーセル表示が切り替わったときの処理を設定する</h2>
+<h2><a id="h4-12"></a><span class="secno">4.12　</span>カルーセル表示が切り替わったときの処理を設定する</h2>
 <p>カルーセル表示が切り替わったときに、連動してページネーションの表示を切り替えるようにします。この実装にはslickで定義されている<tt>afterChange</tt>というイベントをjQueryの<tt>on</tt>関数を使って拾えるようにします。</p>
 <div class="emlist-code">
 <pre class="emlist">carouselE.on(&quot;afterChange&quot;, function() {
@@ -417,7 +329,7 @@ carouselPagination.activatePage(carousel.currentIndex());
 </pre>
 </div>
 
-<h2><a id="h4-14"></a><span class="secno">4.14　</span>トップページのJavaScriptまとめ</h2>
+<h2><a id="h4-13"></a><span class="secno">4.13　</span>トップページのJavaScriptまとめ</h2>
 <p>これまでのJavaScriptをまとめると次のとおりになります。</p>
 <div class="emlist-code">
 <pre class="emlist">$(function() {
